--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    //    compile 'com.github.adzcsx2:EventBusL:18beccbffb'
+//    compile project(':eventbusl')
+//    compile 'com.github.adzcsx2:EventBusL:6fe15f8a83'
 }
