--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    //    compile 'com.github.adzcsx2:EventBusL:18beccbffb'
-    compile project(':eventbusl')
-//    compile 'com.github.adzcsx2:EventBusL:6fe15f8a83'
-//    compile 'com.github.adzcsx2:EventBusL:ee04abed2b'
+//    compile project(':eventbusl')
+    compile 'com.github.adzcsx2:EventBusL:ff51df3214'
 }
