--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-//    compile project(':eventbusl')
-    compile 'com.github.adzcsx2:EventBusL:ff51df3214'
+    compile project(':eventbusl')
+//    compile 'com.github.adzcsx2:EventBusL:ff51df3214'
 }
